--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section id=hero>
     <div id="hero_content">
       <h2>
-        Mi LED TV 4A PRO 32
+        Mi LED TV 4A PRO 32s
       </h2>
       <p class="hero_info">
         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
@@ -232,4 +232,5 @@
 
   
 </body>
+
 </html>
